Fix layout bug

--- a/source.scss
+++ b/source.scss
@@ -39,8 +39,8 @@
 
   &::before {
     content: "";
-    width: 24px;
-    height: 24px;
+    width: 22px;
+    height: 22px;
     left: 15px;
     margin-right: 6px;
     margin-top: -2px;
